--- a/views/partials/pm-nav.ejs
+++ b/views/partials/pm-nav.ejs
@@ -46,6 +46,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/conflicts"><i class="fas fa-tachometer-alt me-2"></i>Dashboard</a></li>
+                        <li><a class="dropdown-item" href="/conflicts/new"><i class="fas fa-plus-circle me-2"></i>New Check</a></li>
                         <li><a class="dropdown-item" href="/conflicts/history"><i class="fas fa-history me-2"></i>Check History</a></li>
                         <li><a class="dropdown-item" href="/conflicts/parties"><i class="fas fa-users me-2"></i>Parties Database</a></li>
                         <li><a class="dropdown-item" href="/conflicts/waivers"><i class="fas fa-file-signature me-2"></i>Waivers</a></li>
